Membuat header dan footer

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Latihan GIT</title>
   </head>
   <body>
+    <header>Ini Header</header>
     <h1>Hello World!</h1>
     <p>Lorem ipsum dolor sit amet.</p>
+    <footer>Ini footer</footer>
   </body>
 </html>
