Menambah Div di Halaman Kontak

--- a/contact-us.html
+++ b/contact-us.html
@@ -9,6 +9,7 @@
     <header>Ini Header</header>
     <h1>Hello World!</h1>
     <p>Ini adalah halaman contact</p>
+    <div>Hello hello Bandung</div>
     <footer>Ini footer</footer>
   </body>
 </html>
